--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,8 @@
 .container {
+    width: 100%;
+}
+
+.items {
     margin-bottom: 5%;
     display:flex;
     flex-direction: column;
@@ -15,4 +19,23 @@
     flex-direction: column;
     gap:50px;
     padding-bottom: 30px;
+}
+
+.actions {
+    width: 100%;
+    display: flex;
+    justify-content: right;
+}
+
+.mover {
+    background-color: #6B00F5;
+    border-radius: 40px 0px 0px 40px;
+    width: 140px;
+    display:flex;
+    justify-content: center;
+    gap:8px;
+    align-items: center;
+    padding-left: 10px;
+    color:white;
+    margin-top: 10px;
 }
