--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -11,3 +11,26 @@
     font-size: 5vw;
     cursor: pointer;
 }
+
+.containerAdded {
+    border-radius: 50px;
+    color:white;
+    background-color: #000000;
+    width: 150px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    font-size: 5vw;
+    cursor: pointer;
+}
+
+.divCenter {
+    display:flex;
+    justify-content: center;
+    gap:10px;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
