--- a/src/components/ItemCart.module.css
+++ b/src/components/ItemCart.module.css
@@ -8,6 +8,7 @@
 .itemContainer {
     display: flex;
     width: 96%;
+    height: 80px;
     gap:10px;
     margin-left: 0%;
     margin-right: 5%;
@@ -51,6 +52,7 @@
     justify-content: center;
     align-items: center;
     margin:10px;
+    height: 40px;
 }
 
 .add {
